@@ -22,16 +22,21 @@
  *   - name:     The name of the page variable to set
  *   - value:    The value of the page variable to set, comma separated list is possible
  *
- * Zikula doesn't impose any restriction on the page variabl's name except for duplicate
+ * Zikula doesn't impose any restriction on the page variable's name except for duplicate
  * and reserved names. As of this writing, the list of reserved names consists of
  * <ul>
  * <li>title</li>
  * <li>stylesheet</li>
  * <li>javascript</li>
  * <li>body</li>
- * <li>rawtext</li>
+ * <li>header</li>
  * <li>footer</li>
  * </ul>
+ * 
+ * In addition, if your system is operating in legacy compatibility mode, then
+ * the variable 'rawtext' is reserved, and maps to 'header'. (When not operating in
+ * legacy compatibility mode, 'rawtext' is not reserved and will not be rendered
+ * to the page output by the page variable output filter.)
  *
  * Examples
  *   {pageaddvar name='javascript' value='path/to/myscript.js'}
@@ -57,7 +62,7 @@ function smarty_function_pageaddvar($params, Zikula_View $view)
         return false;
     }
 
-    if ($name != 'rawtext') {
+    if ($name != 'header') {
         $value = explode(',', $value);
     }
     PageUtil::addVar($name, $value);
